<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondGris"
    tools:context="recipeit.recipeit.Connexion"
    tools:layout_editor_absoluteY="25dp">


    <TextView
        android:id="@+id/textConnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cookie"
        android:gravity="left"
        android:text="@string/connexionText"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        android:textSize="37sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ralewaylight"
        android:text="@string/connexionText2"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:layout_marginTop="7dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textConnexion"
        app:layout_constraintStart_toStartOf="@+id/guideline"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/barre"
        android:layout_width="120dp"
        android:layout_height="2dp"
        android:layout_marginTop="4dp"
        android:background="#AA0909"
        app:layout_constraintRight_toRightOf="@id/guideline"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textConnexion" />

    <ImageView
        android:id="@+id/logoimg"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:src="@drawable/logo"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/barre"/>

    <LinearLayout
        android:id="@+id/textEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/textbackground"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textConnexion"
        app:layout_constraintStart_toStartOf="@+id/textConnexion"
        app:layout_constraintTop_toBottomOf="@+id/logoimg">

        <ImageView
            android:id="@+id/imgconnexion-user"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:srcCompat="@drawable/connexion_user" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:background="@android:color/transparent"
            android:ems="10"
            android:paddingLeft="15dp"
            android:fontFamily="@font/juliussansone"
            android:hint="@string/e_mailEditText"
            android:inputType="textPersonName"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/textMdpLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/textbackground"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textEmailLayout"
        app:layout_constraintStart_toStartOf="@+id/textEmailLayout"
        app:layout_constraintTop_toBottomOf="@+id/textEmailLayout">

        <ImageView
            android:id="@+id/imgconnexion-mdp"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:srcCompat="@drawable/connexion_mdp" />

        <EditText
            android:id="@+id/editTextMdp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:ems="10"
            android:paddingLeft="15dp"
            android:textColor="#000000"
            android:background="@android:color/transparent"
            android:fontFamily="@font/juliussansone"
            android:hint="@string/mot_de_passeEditText"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonValider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:fontFamily="@font/ralewaythin"
        android:text="Valider"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="#ffffff"
        app:layout_constraintEnd_toEndOf="@+id/textMdpLayout"
        app:layout_constraintStart_toStartOf="@+id/textMdpLayout"
        app:layout_constraintTop_toBottomOf="@+id/textMdpLayout" />


    <Button
        android:id="@+id/buttonCreerCompte"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:fontFamily="@font/cookie"
        android:text="Pas de compte ? Inscris-toi ici"
        android:textAllCaps="false"
        android:textSize="27sp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/textMdpLayout"
        app:layout_constraintStart_toStartOf="@+id/textMdpLayout"
        app:layout_constraintTop_toBottomOf="@+id/buttonValider"
        android:onClick="creerCompte"/>

    <TextView
        android:id="@+id/textViewViaRéseaux"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/cookie"
        android:text="@string/via_r_seauxText"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/textMdpLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textMdpLayout"
        app:layout_constraintTop_toBottomOf="@+id/buttonCreerCompte" />

    <ImageButton
        android:id="@+id/buttonGooglePlus"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:scaleType="centerInside"
        android:background="@android:color/transparent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/ButtonFacebook"
        app:srcCompat="@drawable/googleplus"
        android:visibility="gone"/>

    <ImageButton
        android:id="@+id/ButtonFacebook"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerInside"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewViaRéseaux"
        app:layout_constraintVertical_bias="0.097"
        app:srcCompat="@drawable/facebook_home_logo"
        android:visibility="gone"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />


</android.support.constraint.ConstraintLayout>