<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondGris"
    tools:context="recipeit.recipeit.inscription">


        <TextView
            android:id="@+id/textinscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cookie"
            android:gravity="left"
            android:text="@string/inscriptionText"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ralewaylight"
            android:text="@string/inscriptionText2"
            android:layout_marginTop="7dp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:textSize="23sp" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/barre"
        android:layout_width="120dp"
        android:layout_height="2dp"
        android:layout_marginTop="4dp"
        app:layout_constraintRight_toRightOf="@id/guideline"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        android:background="#AA0909"
        app:layout_constraintTop_toBottomOf="@+id/textinscription"
        />

    <LinearLayout
        android:id="@+id/textEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/textbackground"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textinscription"
        app:layout_constraintStart_toStartOf="@+id/textinscription"
        app:layout_constraintTop_toBottomOf="@+id/barre">

        <ImageView
            android:id="@+id/imgconnexion-user"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:srcCompat="@drawable/connexion_user" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:background="@android:color/transparent"
            android:ems="10"
            android:paddingLeft="15dp"
            android:fontFamily="@font/ralewaylight"
            android:hint="@string/e_mailEditText"
            android:inputType="textPersonName"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/textMdpLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/textbackground"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textEmailLayout"
        app:layout_constraintStart_toStartOf="@+id/textEmailLayout"
        app:layout_constraintTop_toBottomOf="@+id/textEmailLayout">

        <ImageView
            android:id="@+id/imgconnexion-mdp"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:srcCompat="@drawable/connexion_mdp" />

        <EditText
            android:id="@+id/editTextMdp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:ems="10"
            android:paddingLeft="15dp"
            android:textColor="#ffffff"
            android:background="@android:color/transparent"
            android:fontFamily="@font/ralewaylight"
            android:hint="@string/mot_de_passeEditText"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/VerifMdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/textbackground"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textEmailLayout"
        app:layout_constraintStart_toStartOf="@+id/textEmailLayout"
        app:layout_constraintTop_toBottomOf="@+id/textMdpLayout">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:srcCompat="@drawable/connexion_mdp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:ems="10"
            android:paddingLeft="15dp"
            android:textColor="#ffffff"
            android:background="@android:color/transparent"
            android:fontFamily="@font/ralewaylight"
            android:hint="Vérifier le mot de passe"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonCreerCompte"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="13dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:fontFamily="@font/ralewaythin"
        android:text="Valider"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="#ffffff"
        app:layout_constraintEnd_toEndOf="@+id/textMdpLayout"
        app:layout_constraintStart_toStartOf="@+id/textMdpLayout"
        app:layout_constraintTop_toBottomOf="@+id/VerifMdp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

</android.support.constraint.ConstraintLayout>
